# mnemosyne

./: .appveyor.yml  .bzrignore  .codecov.yml  .gitattributes  .gitignore  .mailmap  .travis.yml  CHANGELOG.md  ChangeLog  LICENSE  MANIFEST.in  Mnemosyne-Installer-MacOS.command  README  README.md  README.py  TODO  compile_zip.py  makefile  mnemosyne.1  mnemosyne.desktop  mnemosyne.spec  mnemosyne.wpr  mnemosyne.wpu  poetry-build.py  pyproject.toml  requirements.txt  setup.py
.travis/: before_install.sh
darwin/: Info.plist  README.md
mnemosyne/: .coveragerc  AUTHORS  ChangeLog  LICENSE  MANIFEST.in  README  README.devel  TODO  makefile  mnemosyne.desktop  mnemosyne.spec  setup.py  version.py
mnemosyne-web/: community.php  config.py  faq.php  features.php  history.php  index.php  news.php  principles.php  screenshots.php  style.css  upload_web.sh
mnemosyne-web/include/: footer.php  header.php
mnemosyne/UDP_server/: README  UDP_widget.py  example_client.py  main_wdgt.py  review_wdgt.py  server.py
mnemosyne/android/: build.gradle  gradle.properties  import-summary.txt  make_jni.bat
mnemosyne/android/app/src/main/cpp/: CMakeLists.txt  pybridge.c
mnemosyne/android_python/: README.devel  activate_cards_dlg.py  android_render_chain.py  configuration.py  database_maintenance.py  main_widget.py  mnemosyne_android.py  review_widget.py  review_widget_cramming.py  sync_dlg.py  utf8_filenames.py
mnemosyne/cle/: main_widget.py  mnemosyne_android.py  review_widget.py  sync_dlg.py
mnemosyne/embedded_in_C/: README  dlgs.c  dlgs.h  dlgs.py  example_client.c  main_wdgt.c  main_wdgt.h  main_wdgt.py  makefile  python_bridge.c  python_bridge.h  python_stdout_stderr.c  python_stdout_stderr.h  review_wdgt.c  review_wdgt.h  review_wdgt.py
mnemosyne/example_plugins/: README  activate_cards_on_rollover.py  add_menu_item.py  after_repetition.py  avg_grade_statistics.py  azure_tts.py  backup.py  configuration.py  custom_tag.py  filter.py  google_cloud_tts.py  grades_criterion.py  hide_toolbar.py  html_statistics.py  lock_down.py  new_card_type.py  new_card_type_widget.py  pie_chart_statistics.py  responsive_voice_tts.py  reverse_arabic.py  shortcuts.py
mnemosyne/example_scripts/: README  add_card.py  export_stats.py  export_to_pdf.py  find_and_replace.py
mnemosyne/libSM2sync/: README
mnemosyne/libmnemosyne/: __init__.py  card.py  card_type.py  card_type_converter.py  component.py  component_manager.py  configuration.py  controller.py  criterion.py  database.py  fact.py  fact_view.py  file_format.py  filter.py  gui_translator.py  hook.py  language.py  log_uploader.py  logger.py  plugin.py  pronouncer.py  render_chain.py  renderer.py  review_controller.py  scheduler.py  statistics_page.py  stopwatch.py  study_mode.py  sync_server.py  tag.py  tag_tree.py  translator.py  ui_component.py  utils.py
mnemosyne/libopenSM2sync/: client.py  server.py  sync.py
mnemosyne/locales/: mnemosyne.pot
mnemosyne/mnemosyne/: LICENSE  README  version.py
mnemosyne/openSM2sync/: README  binary_format.py  client.py  data_format.py  database.py  log_entry.py  log_event.py  mnemosyne_binary_format.py  partner.py  server.py  sync.py  synchroniser.py  tarfile.py  test.py  text_format.py  ui.py  utils.py
mnemosyne/pixmaps/: add.xcf  deck.xcf  edit.xcf
mnemosyne/plugins/: README  add_menu_item.py  add_menu_item_plugin.py  (+13 more)
openSM2sync/: LICENSE  README  binary_format.py  client.py  database.py  log_entry.py  partner.py  server.py  text_format.py  ui.py  utils.py
pixmaps/: cards.xcf  delete.xcf  mnemosyne.icns
po/: am.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  en_GB.po  eo.po  es.po  fa.po  fr.po  gl.po  he.po  hr.po  hu.po  id.po  it.po  ja.po  makefile  mnemosyne.pot  msgfmt.py  nb.po  nl.po  pl.po  pt.po  pt_BR.po  pygettext.py  ru.po  sr.po  sv.po  szl.po  tr.po  uk.po  uz.po  vi.po  zh_CN.po  zh_HK.po  zh_TW.po
science_server/: cgiupload.py  parse_logs.py
tests/: benchmark.py  benchmark_pyqt.py  benchmark_sync_client.py  benchmark_sync_server.py  mnemosyne_test.py  test_activate_cards.py  test_add_cards.py  test_anki2_import.py  test_card_type.py  test_cloze.py  test_configuration.py  test_controller.py  test_convert_cards.py  test_cramming.py  test_cuecard_wcu_import.py  test_database.py  test_db_import.py  test_escape_to_html.py  test_filter.py  test_gui_translator.py  test_html_css.py  test_logging.py  test_media.py  test_mem_import.py  test_mnemosyne1xml_import.py  test_mnemosyne2cards.py  test_plugin.py  test_render_chain.py  test_review_controller.py  test_scheduler.py  test_sentence.py  test_smconv_import.py  test_statistics.py  test_supermemo_7_text_import.py  test_sync.py  test_tag_tree.py  test_tsv_import.py  test_util_functions.py
tools/: convert_junitxml.py  sync_translations.sh
(+1162 files in other folders)
